# aw_robotics

./: AW_ROS_Repository.md  LICENSE  Readme.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/awjoint1750/: .catkin  local_setup.sh
devel/.private/awjoint2080/: .catkin
devel/.private/awjoint2580/: .catkin
devel/.private/awjoint32100/: .catkin  .rosinstall  local_setup.sh
devel/.private/awjoint40100/: .catkin
devel/.private/awtube30808v1/: .catkin  local_setup.sh  setup.sh
devel/.private/awtube30808v1_moveit_config/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/awtube31210v1/: .catkin  setup.sh
devel/.private/awtube31210v1_moveit_config/: .catkin  .rosinstall  local_setup.sh
devel/.private/awtube31814v2/: .catkin
devel/.private/awtube31814v2_moveit_config/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
devel/.private/j_actuator_moveit_config/: .catkin  .rosinstall  local_setup.sh
devel/.private/j_actuator_test/: .catkin  setup.sh
devel/lib/j_actuator_test/: j_actuator_test
devel/lib/pkgconfig/: awjoint1750.pc  awjoint2080.pc  awjoint2580.pc  awjoint32100.pc  awjoint40100.pc  awtube30808v1.pc  awtube30808v1_moveit_config.pc  awtube31210v1.pc  awtube31210v1_moveit_config.pc  awtube31814v2.pc  awtube31814v2_moveit_config.pc  catkin_tools_prebuild.pc  j_actuator_moveit_config.pc  j_actuator_test.pc
devel/share/awjoint1750/cmake/: awjoint1750Config-version.cmake  awjoint1750Config.cmake
devel/share/awjoint2080/cmake/: awjoint2080Config-version.cmake  awjoint2080Config.cmake
devel/share/awjoint2580/cmake/: awjoint2580Config-version.cmake  awjoint2580Config.cmake
devel/share/awjoint32100/cmake/: awjoint32100Config-version.cmake  awjoint32100Config.cmake
devel/share/awjoint40100/cmake/: awjoint40100Config-version.cmake  awjoint40100Config.cmake
devel/share/awtube30808v1/cmake/: awtube30808v1Config-version.cmake  awtube30808v1Config.cmake
devel/share/awtube30808v1_moveit_config/cmake/: awtube30808v1_moveit_configConfig-version.cmake  awtube30808v1_moveit_configConfig.cmake
devel/share/awtube31210v1/cmake/: awtube31210v1Config-version.cmake  (+1 more)
doc/: configuration_awtube_meta.md
logs/j_actuator_test/: build.check.000.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.011.log.stderr  build.make.013.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr
src/aw_common/awtube_msgs/: CMakeLists.txt  package.xml
src/aw_common/awtube_msgs/msg/: GripperStatus.msg  RTDiagnostics.msg  RobotState.msg
src/aw_common/awtube_srvs/: CMakeLists.txt  package.xml
src/aw_common/awtube_srvs/srv/: GetBool.srv  GetUint16.srv  Integer.srv  ReadOutputBeckhoff.srv  RobotStateService.srv  SafetyAreaMng.srv  SetCmdGripper.srv  SetOutputBeckhoff.srv  SetUint8.srv
src/aw_descriptions/awtube/awtube30808v1/: package.xml
src/aw_descriptions/awtube/awtube30808v1/meshes/: awtube3_link1.STL  awtube3_link5.STL  awtube3_link6.STL
src/aw_descriptions/awtube/awtube30808v1/meshes/controllo/: awtube3_baselink.STL  awtube3_link5.STL  awtube3_link6.STL
src/aw_descriptions/awtube/awtube30808v1/urdf/: awtube30808v1.urdf
src/aw_descriptions/j_actuators/awjoint2580/: CMakeLists.txt  package.xml
src/aw_descriptions/j_actuators/awjoint2580/config/: configurazione.rviz
src/aw_descriptions/j_actuators/awjoint2580/meshes/: rifJ25.STL
src/aw_descriptions/j_actuators/awjoint2580/urdf/: awjoint2580.csv  awjoint2580.urdf
src/aw_driver/awtube_meta/: CMakeLists.txt  package.xml
src/aw_driver/awtube_meta/config/ethercat_manager/: config.yaml
src/aw_driver/awtube_meta/config/gripper_manager/: config.yaml
src/aw_driver/awtube_meta/config/hardware_interface/: config.yaml
src/aw_driver/awtube_meta/config/hardware_interface/1joint/: 1joint_effort_controllers.yaml  1joint_joint_limits.yaml  1joint_joint_offsets.yaml  1joint_names.yaml  1joint_position_controllers.yaml  1joint_velocity_controllers.yaml
src/aw_driver/awtube_meta/config/hardware_interface/6joints/: 6joints_joint_limits.yaml  6joints_joint_offsets.yaml  6joints_names.yaml  6joints_position_controllers.yaml
src/aw_driver/awtube_meta/config/hardware_mapping/: robot_config_1joint.yaml  robot_config_6joints.yaml
src/aw_driver/awtube_meta/config/robot_manager/: default.yaml
src/aw_driver/awtube_meta/launch/: bringup.launch
src/aw_driver/awtube_meta/scripts/: robovu.sh
src/aw_driver/rt_utils/: README.md  activate_all.sh  isolate_cpus.sh  isolate_irqs.sh  limit_cstates.sh  limit_pstates.sh  toggle_network.sh  toggle_wifi.sh
src/aw_tests/awtube_test/: CMakeLists.txt  package.xml
src/aw_tests/awtube_test/launch/: cartesian_coords_test.launch  joint_position_test.launch  move_test.launch  pose_coords_test.launch  pose_test.launch
src/aw_tests/awtube_test/src/: awtube_joint_position_test.cpp  awtube_pose_test.cpp  cartesian_coords_test.cpp  joint_position_test.cpp  pose_coords_test.cpp
src/aw_tests/j_actuator_test/: CMakeLists.txt  package.xml
src/aw_tests/j_actuator_test/launch/: test.launch
src/aw_tests/j_actuator_test/src/: j_actuator_test.cpp
src/awtube/awtube30808v1/: CMakeLists.txt
src/awtube/awtube30808v1_moveit_config/: .setup_assistant
src/awtube/awtube31210v1/: CMakeLists.txt
src/awtube/awtube31210v1_moveit_config/: CMakeLists.txt
src/awtube/awtube31814v2/: CMakeLists.txt
src/awtube/awtube31814v2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/j_actuators/awjoint1750/: CMakeLists.txt
src/j_actuators/j_actuator_test/: CMakeLists.txt
src/moveit_configs/awtube30808v1_moveit_config/: CMakeLists.txt  package.xml
src/moveit_configs/awtube31210v1_moveit_config/: .setup_assistant
src/moveit_configs/j_actuator_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+261 files in other folders)
