<?xml version="1.0"?>
<package format="2">
  <name>aware_srvs</name>
  <version>0.0.1</version>
  <description>Custom messages of aware_msgs</description>

  <maintainer email="deirossi@automationware.it">Mattia Dei Rossi</maintainer>
  <license>BSD</license>
  <author email="deirossi@automationware.it">Mattia Dei Rossi</author>

  <url type="website">http://www.automationware.it/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>aware_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
