<?xml version="1.0"?>
<package format="2">
  <name>j_actuator_test</name>
  <version>0.0.0</version>
  <description>The j_actuator_test package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <author email="selvija@automationware.it">Armando Selvija</author>
  <maintainer email="selvija@automationware.it">Armando Selvija</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>