<package format="2">
  <name>awtube30808v1</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for awtube30808v1</p>
    <p>This package contains configuration data, 3D models and launch files
for awtube30808v1 robot</p>
  </description>
  <author>AS</author>
  <maintainer email="sofia@automationware.it" />
  <maintainer email="deirossi@automationware.it" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>